[workspace]

resolver = "2"
members = [
  "mtop",
  "mtop-client",

  # Internal
  "benches",
  "fuzz",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "skip"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
