[workspace]

resolver = "2"
members = [
  "mtop",
  "mtop-client",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"

[workspace.metadata.dist.github-custom-runners]
# macos-13 is EOL for Github actions
aarch64-apple-darwin = "macos-15"
x86_64-apple-darwin = "macos-15-intel"
# ubuntu-20.04 is EOL for Github actions
x86_64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-unknown-linux-musl = "ubuntu-22.04"
# windows-2019 uses a version of Rust too old for mtop and some of our dependencies (1.87)
x86_64-pc-windows-msvc = "windows-2025"
global = "ubuntu-22.04"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

