[package]
name = "mtop-client"
version = "0.11.0"
authors = ["Nick Pillitteri"]
description = "Memcached client for mtop"
homepage = "https://github.com/56quarters/mtop"
repository = "https://github.com/56quarters/mtop"
readme = "../README.md"
license = "GPL-3.0+"
keywords = ["top", "memcached"]
edition = "2021"

[dependencies]
byteorder = "1.5.0"
pin-project-lite = "0.2.13"
rustls-pemfile = "2.1.0"
rustls-webpki = "0.102.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = { version = "0.25.0" }
tracing = "0.1.40"
urlencoding = "2.1.2"
webpki-roots = "0.26.1"
rand = "0.8.5"

[lib]
name = "mtop_client"
path = "src/lib.rs"
