[package]
name = "mtop-client"
version = "0.14.0"
authors = ["Nick Pillitteri"]
description = "Memcached client for mtop"
homepage = "https://github.com/56quarters/mtop"
repository = "https://github.com/56quarters/mtop"
readme = "../README.md"
license = "GPL-3.0+"
keywords = ["top", "memcached"]
edition = "2024"

[dependencies]
byteorder = "1.5.0"
pin-project-lite = "0.2.13"
rand = "0.8.5"
rustls-pki-types = {  version = "1.11.0", features = ["std"]}
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
tracing = "0.1.40"
urlencoding = "2.1.2"
webpki-roots = "0.26.1"

[lib]
name = "mtop_client"
path = "src/lib.rs"
