[package]
name = "mtop-client"
version = "0.15.0"
authors = ["Nick Pillitteri"]
description = "Memcached client for mtop"
homepage = "https://github.com/56quarters/mtop"
repository = "https://github.com/56quarters/mtop"
readme = "../README.md"
license = "GPL-3.0+"
keywords = ["top", "memcached"]
edition = "2024"

[dependencies]
byteorder = "1.5.0"
pin-project-lite = "0.2.16"
rand = "0.9.1"
rustls-pki-types = {  version = "1.12.0", features = ["std"]}
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "tls12"] }
tracing = "0.1.41"
urlencoding = "2.1.3"
webpki-roots = "1.0.0"

[lib]
name = "mtop_client"
path = "src/lib.rs"
