[package]
name = "mtop"
version = "0.12.0"
authors = ["Nick Pillitteri"]
description = "mtop: top for Memcached"
homepage = "https://github.com/56quarters/mtop"
repository = "https://github.com/56quarters/mtop"
readme = "../README.md"
license = "GPL-3.0+"
keywords = ["top", "memcached"]
edition = "2021"

[dependencies]
clap = { version = "4.1.8", default-features = false, features = ["cargo", "derive", "help", "error-context", "std", "string", "usage", "wrap_help"] }
crossterm = "0.27.0"
mtop-client = { path = "../mtop-client", version = "0.12.0" }
rand = "0.8.5"
rand_distr = "0.4.3"
rustls-pki-types = "1.7.0"
ratatui = "0.27.0"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.11"
tracing-subscriber = "0.3.16"
# Profiling, disabled by default
pprof = { version = "0.13.0", features = ["protobuf-codec"], optional = true }

[features]
default = []
profile = ["dep:pprof"]

[lib]
name = "mtop"
path = "src/lib.rs"
