[package]
name = "mtop"
version = "0.15.0"
authors = ["Nick Pillitteri"]
description = "mtop: top for Memcached"
homepage = "https://github.com/56quarters/mtop"
repository = "https://github.com/56quarters/mtop"
readme = "../README.md"
license = "GPL-3.0+"
keywords = ["top", "memcached"]
edition = "2024"

[dependencies]
clap = { version = "4.5.40", default-features = false, features = ["cargo", "derive", "env", "help", "error-context", "std", "string", "usage", "wrap_help"] }
crossterm = "0.29.0"
mtop-client = { path = "../mtop-client", version = "0.15.0" }
rand = "0.9.1"
rand_distr = "0.5.1"
rustls-pki-types = "1.12.0"
ratatui = "0.29.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# Profiling, disabled by default
pprof = { version = "0.15.0", features = ["protobuf-codec"], optional = true }

[features]
default = []
profile = ["dep:pprof"]

[lib]
name = "mtop"
path = "src/lib.rs"
