[package]
name = "mtop"
version = "0.16.2"
authors = ["Nick Pillitteri"]
description = "mtop: top for Memcached"
homepage = "https://github.com/56quarters/mtop"
repository = "https://github.com/56quarters/mtop"
readme = "../README.md"
license = "GPL-3.0+"
keywords = ["top", "memcached"]
edition = "2024"

[dependencies]
clap = { version = "4.5.40", default-features = false, features = ["cargo", "derive", "env", "help", "error-context", "std", "string", "usage", "wrap_help"] }
crossterm = { version = "0.28.0", default-features = false, features = ["events"] }
mtop-client = { path = "../mtop-client", version = "0.16.2" }
rand = "0.9.1"
rand_distr = "0.5.1"
rustls-pki-types = "1.12.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "ansi"] }
# Profiling, disabled by default
pprof = { version = "0.15.0", features = ["protobuf-codec"], optional = true }

[features]
default = []
profile = ["dep:pprof"]

[lib]
name = "mtop"
path = "src/lib.rs"
